@@ -4,7 +4,8 @@
     extract zip, rar, 7z in terminal for output & password prompt fixes #72
     if no 7za, use 7zr for 7zip extraction and creation closes #62
     added rar creation closes #36 ; rar zip & 7z creation runs in terminal
-    fixed hang on mount dialog open during new tab added
+    fixed hang on new tab added after mount
+    fixed make errors with --disable-desktop-integration fixes #78
 0.7.6   2012-04-19:
     unmount on exit no longer default (affects new installs)
     documented deb packages require $TMPDIR not be noexec closes #64
